--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^4.2.1
   cloud_firestore: ^4.2.0
   shared_preferences: ^2.0.15
+  image_picker: ^0.8.6
+  firebase_storage: ^11.0.10
 
 dev_dependencies:
   flutter_test:
